--- a/tests/config/cifar10_classifier.yaml
+++ b/tests/config/cifar10_classifier.yaml
@@ -28,15 +28,15 @@ trainer:
       every_n_epochs: 2
     LearningRateMonitor:
       every_n_epochs: 1
-    JAXProfiler:
-      every_n_minutes: 60
-      first_step: 10
-      profile_n_steps: 20
-    # GradientSpikeMonitor:
-    #   every_n_epochs: 1
-    #   log_to_disk: True
-    #   ema_decay: 0.99
-    #   threshold: 3.0
+#    JAXProfiler:
+#      every_n_minutes: 60
+#      first_step: 10
+#      profile_n_steps: 20
+#     GradientSpikeMonitor:
+#       every_n_epochs: 1
+#       log_to_disk: True
+#       ema_decay: 0.99
+#       threshold: 3.0
 model:
   name: tests.models.SimpleClassifier
   hparams:
