Added pmap supporting metrics

--- a/jax_trainer/examples/cifar10_cls.yaml
+++ b/jax_trainer/examples/cifar10_cls.yaml
@@ -13,7 +13,7 @@ trainer:
   log_grad_norm: True
   detect_nans: True
   logger:
-    _class: Logger
+    # _class: Logger
     log_dir: tests/checkpoints/BuildTrainerTest/
     tool: TensorBoard
     project_name: default
